Try to fix hover issues and disappearing buttons on iOS, make local task main item in toolbar always point to current page

--- a/html/modules/custom/ghi_gin/css/gin.css
+++ b/html/modules/custom/ghi_gin/css/gin.css
@@ -1,8 +1,3 @@
 h1.page-title {
   padding-right: 0.3rem;
 }
-
-.gin--horizontal-toolbar #toolbar-administration .toolbar-lining,
-.ui-dialog {
-  -webkit-overflow-scrolling: auto !important;
-}
